--- a/css/ls.layout.index.css
+++ b/css/ls.layout.index.css
@@ -17,7 +17,7 @@
 /*侧边栏*/
 
 .ls-layout .ls-layout-slider {
-    width: 200px;
+    width: 220px;
     height: 100vh;
     border: none;
     background: #1f242a;
@@ -43,9 +43,8 @@
 }
 
 .ls-layout .ls-layout-slider .searchbox {
-    height: 30px;
-    padding: 3px;
-    border-bottom: 1px solid rgba(0, 0, 0, .1);
+    padding: 5px 10px;
+    border-bottom: 1px solid rgba(0, 0, 0, .2);
 }
 
 .ls-layout .ls-layout-slider .searchbox .fa {
@@ -53,16 +52,19 @@
 }
 
 .ls-layout .ls-layout-slider input {
-    height: 16px;
-    border: none;
+    height: 22px;
+    line-height: 22px;
+    display: block;
     color: #999;
     background: rgba(0, 0, 0, .6);
-    width: 160px;
-    margin: 3px 6px;
-    padding: 5px 10px;
+    margin: 5px auto;
+    border: none;
+    outline: none;
+    padding: 6px 10px;
     -webkit-transition: width 300ms ease;
     transition: width 300ms ease;
     border-radius: 4px;
+    width: 90%;
 }
 
 .ls-layout .ls-layout-slider.contracted {
@@ -77,7 +79,7 @@
 }
 
 .ls-layout-slider.contracted .searchbox input {
-    width: 0px;
+    /* width: 0px; */
     padding: 0;
 }
 
@@ -101,6 +103,9 @@
 }
 
 .slider-menu li ul {
+    transition: max-height 300ms ease;
+    -webkit-transition: max-height 300ms ease;
+    overflow: hidden;
     display: none;
     background: rgba(0, 0, 0, .25);
 }
@@ -114,15 +119,17 @@
 .slider-menu ul li a {
     position: relative;
     display: block;
-    padding: 6px 0px 6px 10px;
-    font-size: 12px;
+    padding: 8px 0px 8px 12px;
+    font-size: 13px;
     cursor: pointer;
     white-space: nowrap;
     overflow: hidden;
-    color: #b8c7ce;
+    line-height: 1.6;
+    letter-spacing: 1px;
+    color: #b9bcc0;
 }
 
-.ls-layout-slider .expanded {
+.ls-layout-slider ul.expanded {
     display: block;
 }
 
@@ -204,12 +211,28 @@
     top: 0;
 }
 
-.ls-layout-slider.contracted .slider-menu .node-container-root:hover .node-container-son {
+.ls-layout-slider.contracted .slider-menu .node-container-son {
+    display: none;
+    width: 150px;
+    position: absolute;
+    background: #1f242a;
+    padding: 10px;
+    padding: 10px;
+    border-radius: 4px;
+    top: 0;
+}
+
+.ls-layout-slider.contracted .slider-menu .node-container-son {
+    position: relative;
+}
+
+.ls-layout-slider.contracted .slider-menu .node-container-root:hover .node-container-son:nth-child(1) {
     display: block;
 }
 
 .ls-layout .ls-layout-slider.contracted input {
-    width: 0;
+    /* width: 0; */
+    display: none;
 }
 
 .ls-layout .layui-tab-title.contracted .node-container .slider-menu li ul {
@@ -338,7 +361,6 @@
 }
 
 .ls-tab-container .ls-tab-titles .tab-title.active {
-    background: rgba(238, 238, 238, .6);
     background: rgba(238, 238, 238, .7);
     border-bottom: none;
     color: #1d7ce3;
@@ -397,9 +419,48 @@
 }
 
 .tab-operate-left .fa {
-    border-right: 1px solid #e6e6e6;
+    border-right: 1px solid rgb(230, 230, 230, .8);
 }
 
 .tab-operate-right .fa {
-    border-left: 1px solid #e6e6e6;
+    border-left: 1px solid rgb(230, 230, 230, .8);
+    position: relative;
+}
+
+.tab-operate-right .fa .dropdown-panel {
+    background: #fff;
+    position: absolute;
+    width: 120px;
+    right: 0;
+    font-size: 13px;
+    transition: top 300ms ease-in, opacity 300ms ease-in;
+    -webkit-transition: top 300ms ease-in, opacity 300ms ease-in;
+    border-radius: 4px;
+    top: 46px;
+    height: 0;
+    opacity: 0;
+    overflow: hidden;
+}
+
+.tab-operate-right .fa:hover .dropdown-panel {
+    top: 37px;
+    opacity: 1;
+    height: auto;
+    border: 1px solid rgb(230, 230, 230, .8);
+}
+
+.tab-operate-right .fa .dropdown-panel ul {
+    list-style: none;
+    margin: 0;
+    padding: 5px 0;
+}
+
+.tab-operate-right .fa .dropdown-panel ul li {
+    line-height: 28px;
+}
+
+.tab-operate-right .fa .dropdown-panel ul li:hover {
+    background: rgba(238, 238, 238, .6);
+    z-index: 6;
+    cursor: pointer;
 }
