--- a/css/ls.admin.css
+++ b/css/ls.admin.css
@@ -81,3 +81,39 @@ button:not(:disabled),
     -webkit-flex-direction: column;
     -webkit-box-orient: vertical;
 }
+
+input[type='text'],
+input[type='password'],
+input[type='tel'],
+input[type='number'],
+input[type='email'],
+select,
+textarea {
+    background: #fff;
+    border-radius: 4px;
+    border: 1px solid #e6e6e6;
+    font-size: 13px;
+    padding: 4px 10px;
+    line-height: 1.5;
+    outline: none;
+    box-sizing: border-box;
+    color: #333;
+    transition: border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
+}
+
+input[type='text']:focus,
+input[type='password']:focus,
+input[type='tel']:focus,
+input[type='number']:focus,
+input[type='email']:focus,
+select:focus,
+textarea :focus {
+    border-color: #1d7ce3;
+    box-shadow: 0 0 0 2px rgba(29, 124, 227, .3);
+}
+
+select option {
+    display: inline-block;
+    line-height: 1.5;
+    padding: 6px 12px;
+}
