侧边栏显示优化；基于jquery validate的表单校验；

--- a/css/button.css
+++ b/css/button.css
@@ -15,7 +15,6 @@
     font-size: 13px;
     line-height: 1.5;
     border-radius: 4px;
-    transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
 }
 
 .btn:focus {
@@ -121,7 +120,7 @@
 /*size*/
 
 .btn-large {
-    font-size: 18px;
+    font-size: 16px;
     padding: 8px 16px;
     border-radius: 6px;
 }
@@ -146,4 +145,12 @@
 .btn-group .btn {
     margin: 0;
     border: none;
+}
+
+
+/*animate*/
+
+.btn {
+    /* -webkit-transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out; */
+    /* transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out; */
 }
